--- a/style.css
+++ b/style.css
@@ -1,24 +1,73 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding-left: 130px;
-    padding-right: 130px;
     background-color: #1F2937;
+    padding: 0 130px;
 }
 
 .header-left {
     display: flex;
-    padding: 10px;
     align-items: center;
-    font-size: 24px;
     color: #F9FAF8;
+    font-size: 24px;
     font-weight: 600;
+    padding: 10px;
 }
 
 .header-right {
     display: flex;
     align-items: center;
-    gap: 16px;
-    font-size: 18px;
     color: white;
+    font-size: 18px;
+    gap: 16px;
+}
+
+.body {
+    display: flex;
+    align-items: center;
+    background: #1F2937;
+    height: 250px;
+    padding: 50px 130px;
+}
+
+.body-left {
+    max-width: 50%; 
+    margin-left: 9px; 
+}
+
+.body-title {
+    font-weight: bolder;
+    color: #F9FAF8;
+    font-size: 48px;
+}
+
+.body-content {
+    display: flex;
+    color: #E5E7EB;
+    font-size: 18px;
+    padding: 5px 0;
+}
+
+.sign-up {
+    display: block;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-weight: 600;
+    width: 125px;
+    padding: 5px 20px;
+    border: 2px;
+    border-radius: 7px;
+}
+
+.placeholder {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    background-color: gray;
+    color: white;
+    font-size: 18px;
+    width: 250px;
+    height: 200px;
+    margin-left: 100px;
+    padding: 0 130px;
 }
